welcome.lessons.welcome.variables.Variables.scala.error
Variables:6: error: not found: type int
var r: int=0
       ^